--- a/index.html
+++ b/index.html
@@ -3,33 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stevenson Bills Search</title>
+    <title>Stevenson Bills Database</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Fallback: Ensure text is visible even if Tailwind fails to load */
-        body { font-family: sans-serif; padding: 20px; color: #333; }
-        .container { max-width: 1100px; margin: 0 auto; }
-    </style>
 </head>
-<body class="bg-gray-50 min-h-screen">
+<body class="bg-slate-50 min-h-screen pb-20">
 
-    <div class="container max-w-6xl mx-auto px-4 py-8">
-        <div class="mb-8 text-center border-b pb-6">
-            <h1 class="text-4xl font-bold text-slate-800">Legislative Bill Search</h1>
-            <p class="text-slate-600 mt-2">Front-end prototype for Stevenson Bills database</p>
+    <div class="max-w-6xl mx-auto px-4 py-8">
+        <div class="mb-10">
+            <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight">Legislative Bill Search</h1>
+            <p class="text-slate-600 mt-2">Searchable index of the Stevenson Bills dataset.</p>
         </div>
 
-        <div class="bg-white p-6 rounded-xl shadow-sm border border-slate-200 mb-6">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-end">
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2 font-bold">1. Select your CSV file</label>
-                    <input type="file" id="csvFileInput" accept=".csv" 
-                        class="block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100 cursor-pointer" />
-                </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-2 font-bold">2. Search results</label>
-                    <input type="text" id="searchInput" placeholder="Type to filter..." 
-                        class="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+        <div class="sticky top-4 z-10 mb-8">
+            <div class="relative shadow-xl rounded-lg overflow-hidden">
+                <input type="text" id="searchInput" 
+                    placeholder="Search by keyword, bill number, or category..." 
+                    class="w-full px-6 py-4 text-lg border-none focus:ring-2 focus:ring-blue-500 outline-none" />
+                <div id="loadingIndicator" class="absolute right-4 top-4 text-blue-500 font-bold">
+                    Loading Data...
                 </div>
             </div>
         </div>
@@ -37,67 +28,85 @@
         <div class="bg-white rounded-xl shadow-sm border border-slate-200 overflow-hidden">
             <div class="overflow-x-auto">
                 <table class="w-full text-left border-collapse">
-                    <thead class="bg-slate-100 border-b border-slate-200">
+                    <thead class="bg-slate-800 text-white">
                         <tr>
-                            <th class="px-6 py-4 text-sm font-semibold text-slate-700">Session</th>
-                            <th class="px-6 py-4 text-sm font-semibold text-slate-700">Bill #</th>
-                            <th class="px-6 py-4 text-sm font-semibold text-slate-700">Title</th>
-                            <th class="px-6 py-4 text-sm font-semibold text-slate-700">Link</th>
+                            <th class="px-6 py-4 text-sm font-semibold uppercase tracking-wider">Session</th>
+                            <th class="px-6 py-4 text-sm font-semibold uppercase tracking-wider">Bill</th>
+                            <th class="px-6 py-4 text-sm font-semibold uppercase tracking-wider">Title</th>
+                            <th class="px-6 py-4 text-sm font-semibold uppercase tracking-wider">Categories</th>
+                            <th class="px-6 py-4 text-sm font-semibold uppercase tracking-wider">Link</th>
                         </tr>
                     </thead>
-                    <tbody id="tableBody" class="divide-y divide-slate-100">
-                        <tr>
-                            <td colspan="4" class="px-6 py-12 text-center text-slate-400">
-                                Use the button above to load the CSV file.
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tbody id="tableBody" class="divide-y divide-slate-200">
+                        </tbody>
                 </table>
             </div>
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+
     <script>
         let billData = [];
+        const CSV_URL = 'data.csv'; // <--- CHANGE THIS to your actual filename in the repo
 
-        document.getElementById('csvFileInput').addEventListener('change', function(e) {
-            const file = e.target.files[0];
-            if (!file) return;
-            
-            Papa.parse(file, {
+        // 1. Auto-fetch the CSV file when page loads
+        window.addEventListener('DOMContentLoaded', () => {
+            Papa.parse(CSV_URL, {
+                download: true,
                 header: true,
                 skipEmptyLines: true,
                 complete: function(results) {
                     billData = results.data;
+                    document.getElementById('loadingIndicator').classList.add('hidden');
                     renderTable(billData);
+                },
+                error: function(err) {
+                    document.getElementById('loadingIndicator').innerText = "Error loading data.";
+                    console.error(err);
                 }
             });
         });
 
-        document.getElementById('searchInput').addEventListener('input', function(e) {
-            const searchTerm = e.target.value.toLowerCase();
+        // 2. Search Logic
+        document.getElementById('searchInput').addEventListener('input', (e) => {
+            const term = e.target.value.toLowerCase();
             const filtered = billData.filter(row => {
-                return Object.values(row).some(val => String(val).toLowerCase().includes(searchTerm));
+                return Object.values(row).some(val => String(val).toLowerCase().includes(term));
             });
             renderTable(filtered);
         });
 
+        // 3. UI Rendering
         function renderTable(data) {
             const tbody = document.getElementById('tableBody');
             tbody.innerHTML = '';
+
             if (data.length === 0) {
-                tbody.innerHTML = '<tr><td colspan="4" class="px-6 py-8 text-center text-slate-500">No results found.</td></tr>';
+                tbody.innerHTML = '<tr><td colspan="5" class="px-6 py-10 text-center text-slate-400 font-medium">No matches found.</td></tr>';
                 return;
             }
+
             data.forEach(row => {
                 const tr = document.createElement('tr');
+                tr.className = "hover:bg-blue-50/50 transition-colors duration-150";
+                
+                // Clean up categories (they are often semicolon separated in CSVs)
+                const categories = row['Index Categories'] ? row['Index Categories'].split(';')[0] : 'General';
+
                 tr.innerHTML = `
-                    <td class="px-6 py-4 text-sm">${row.Session || ''}</td>
-                    <td class="px-6 py-4 text-sm font-bold text-blue-600">${row.Bill || row['Bill Number'] || ''}</td>
-                    <td class="px-6 py-4 text-sm text-slate-800">${row.Title || ''}</td>
+                    <td class="px-6 py-4 text-sm text-slate-500 whitespace-nowrap">${row.Session || ''}</td>
+                    <td class="px-6 py-4 text-sm font-bold text-blue-700 whitespace-nowrap">${row['Bill Number'] || row.Bill || ''}</td>
+                    <td class="px-6 py-4 text-sm text-slate-800 leading-relaxed">${row.Title || ''}</td>
+                    <td class="px-6 py-4 text-sm text-slate-500">
+                         <span class="inline-block bg-slate-100 px-2 py-1 rounded text-[10px] font-bold uppercase tracking-tight text-slate-600">
+                            ${categories}
+                         </span>
+                    </td>
                     <td class="px-6 py-4 text-sm">
-                        <a href="${row.URL}" target="_blank" class="text-blue-500 hover:underline font-bold">Link</a>
+                        <a href="${row.URL}" target="_blank" class="inline-flex items-center px-3 py-1 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors shadow-sm text-xs font-bold">
+                            View ↗
+                        </a>
                     </td>
                 `;
                 tbody.appendChild(tr);
