Update title and text for House Bill Search
Header Text and Typography Refinement - Brand Correction: Removed italics from "Cherlynn Stevenson" to match the non-italicized primary branding preference. - Contextual Clarity: Updated the sub-headline to "House Bill Tracking Portal (2019-2024)" to accurately define the dataset contents. - Style Persistence: Maintained the use of #1C75BA Blue and Impact headline font as specified in the Brand Guide.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bill Search | Cherlynn Stevenson</title>
+    <title>House Bill Search | Cherlynn Stevenson</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
     
@@ -14,14 +14,14 @@
                 extend: {
                     colors: {
                         'brand-blue': '#1C75BA', // Primary Blue 
-                        'brand-gray': '#B5B5B5', // Primary Gray [cite: 16]
-                        'brand-black': '#000000', // Primary Black [cite: 19]
-                        'brand-white': '#FFFFFF', // Primary White [cite: 25]
+                        'brand-gray': '#B5B5B5', // Primary Gray 
+                        'brand-black': '#000000', // Primary Black 
+                        'brand-white': '#FFFFFF', // Primary White 
                     },
                     fontFamily: {
-                        // Impact for Headlines [cite: 17]
+                        // Impact for Headlines 
                         'headline': ['Impact', 'Haettenschweiler', 'Arial Narrow Bold', 'sans-serif'],
-                        // DIN 2014 Narrow substitute [cite: 22, 28]
+                        // DIN 2014 Narrow substitute 
                         'sans': ['"DIN 2014 Narrow"', '"Barlow Condensed"', 'sans-serif'],
                     },
                 }
@@ -29,7 +29,6 @@
         }
     </script>
     <style>
-        /* Custom scrollbar using brand blue */
         ::-webkit-scrollbar { width: 8px; }
         ::-webkit-scrollbar-thumb { background: #1C75BA; border-radius: 10px; }
     </style>
@@ -39,11 +38,11 @@
     <header class="bg-brand-white border-b-4 border-brand-blue py-10 shadow-sm">
         <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row justify-between items-end gap-4">
             <div>
-                <h1 class="text-5xl font-headline tracking-tight text-brand-blue uppercase italic leading-none">
+                <h1 class="text-5xl font-headline tracking-tight text-brand-blue uppercase leading-none">
                     Cherlynn Stevenson
                 </h1>
                 <p class="text-brand-gray text-lg font-bold tracking-widest mt-2 uppercase">
-                    Legislative Bill Tracking Portal
+                    House Bill Tracking Portal (2019-2024)
                 </p>
             </div>
             <div id="lastUpdated" class="text-[10px] font-bold text-brand-gray border-2 border-brand-gray px-3 py-1 uppercase tracking-widest">
@@ -93,7 +92,7 @@
 
         <footer class="mt-24 py-12 border-t-2 border-brand-gray flex flex-col md:flex-row justify-between items-center gap-6">
             <div class="text-[10px] font-bold text-brand-gray uppercase tracking-[0.3em]">
-                Paid for by Cherlynn Stevenson For Congress
+                Paid for by Cherlynn Stevenson For Congress 
             </div>
             <div class="text-[10px] font-bold text-brand-gray uppercase tracking-[0.3em]">
                 © 2024 All Rights Reserved
